# ransac_solver

./: CMakeLists.txt  README.md
examples/: calc_essential_matrix.cpp  reconstruction.cpp  reconstruction.h
examples/data/: example_camera.txt
include/: absolute_orientation.h  essential_matrix.h  ransac_solver.h  stereo_reprojection.h
